--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ numpy
 math
 lightgbm
 sklearn
+sklearn.preprocessing
+sklearn.multioutput
+sklearn.model_selection 
 pyngrok
 folium
 streamlit_folium
